--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,9 @@
   }
 }
 
-body {
+.container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
